# saathi

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
server/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  audit.py  config.py  db.py  demo_seed.py  explore_seed.py  limiter.py  main.py  models.py  pyproject.toml  requirements.txt  run_agent.py  schemas.py  security.py
server/agents/: agent_classifier.py  book_agent.py  books.py  crisis_agent.py  emotion.py  emotion_detector_agent.py  emotional_validator.py  graph.py  guardrail_agent.py  guided_helper.py  multidisciplinary_agents.py  specialists.py
server/llm/: embeddings.py  provider.py
server/moya/agents/: agent_info.py  azure_openai_agent.py  bedrock_agent.py  crewai_agent.py  ollama_agent.py  openai_agent.py  remote_agent.py
server/moya/classifiers/: base_classifier.py  llm_classifier.py
server/moya/conversation/: message.py  thread.py
server/moya/memory/: base_repository.py  file_system_repo.py  in_memory_repository.py
server/moya/orchestrators/: base_orchestrator.py  multi_agent_orchestrator.py  react_orchestrator.py  simple_orchestrator.py
server/moya/registry/: agent_registry.py  base_agent_repository.py  in_memory_agent_repository.py
server/moya/tools/: base_tool.py  (+2 more)
server/rag/: ranking.py  seed.py  store.py
server/routers/: auth.py  chat.py  community.py  explore.py  journal.py  search.py
server/tests/: conftest.py  fakes.py  test_auth.py  test_chat.py  test_community.py  test_db_migration.py  test_explore.py  test_journal.py  test_search.py
(+39 files in other folders)
