[project]
name = "saathi-server"
version = "0.1.0"
description = "Saathi API — FastAPI backend with a LangGraph multi-agent wellness companion"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
